5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1646_651.log
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:37:53) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
File "XXXX", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:37:54) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- EXECUTION TIME:
0.252814
-- ERROR:
  File "/home/codebench/codes/1646/651/main.py", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:37:54) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- EXECUTION TIME:
0.271281
-- ERROR:
  File "/home/codebench/codes/1646/651/main.py", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:37:54) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M)
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- EXECUTION TIME:
0.110657
-- ERROR:
  File "/home/codebench/codes/1646/651/main.py", line 4
    if(alt.upper() == M)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:38:00) 
-- CODE:
alt = float(int("Altura: "))
sexo = int("M/F: ")

if(alt.upper() == M):
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    alt = float(int("Altura: "))
ValueError: invalid literal for int() with base 10: 'Altura: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:38:15) 
-- CODE:
alt = int("Altura: ")
sexo = int("M/F: ")

if(alt.upper() == M):
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    alt = int("Altura: ")
ValueError: invalid literal for int() with base 10: 'Altura: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:38:33) 
-- CODE:
alt = int("Altura: ")
sexo = int("M/F: ")

if(alt.upper() == M):
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    alt = int("Altura: ")
ValueError: invalid literal for int() with base 10: 'Altura: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:38:49) 
-- CODE:
alt = int("Qual sua altura? ")
sexo = int("M/F: ")

if(alt.upper() == M):
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    alt = int("Qual sua altura? ")
ValueError: invalid literal for int() with base 10: 'Qual sua altura? '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:39:23) 
-- CODE:
alt = float(int("Qual sua altura? "))
sexo = int("M/F: ")

if(alt.upper() == M):
	print((72,7 * alt) - 58)
else:
	print((62,1 * alt) - 44,7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    alt = float(int("Qual sua altura? "))
ValueError: invalid literal for int() with base 10: 'Qual sua altura? '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:40:12) 
-- CODE:
alt = float(int("Qual sua altura? "))
sexo = int("M/F: ")

if(alt.upper() == M):
	print((72,7 * alt) - 58)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    alt = float(int("Qual sua altura? "))
ValueError: invalid literal for int() with base 10: 'Qual sua altura? '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:40:24) 
-- CODE:
alt = float(int("Qual sua altura? "))
sexo = int("M/F: ")

if(alt.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    alt = float(int("Qual sua altura? "))
ValueError: invalid literal for int() with base 10: 'Qual sua altura? '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:40:56) 
-- CODE:
alt = round(int("Qual sua altura? ")),2
sexo = int("M/F: ")

if(alt.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    alt = round(int("Qual sua altura? ")),2
ValueError: invalid literal for int() with base 10: 'Qual sua altura? '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:42:27) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(alt.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(alt.upper() == M):
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:42:52) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(alt.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(alt.upper() == M):
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:43:04) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(alt.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(alt.upper() == M):
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:43:45) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ").upper()

if(alt.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(alt.upper() == M):
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:43:54) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ").upper()

if(alt.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(alt.upper() == M):
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:44:06) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input(("M/F: ").upper())

if(alt.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(alt.upper() == M):
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:45:14) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input(("M/F: ").upper())

if(alt.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(alt.upper() == M):
AttributeError: 'float' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:45:47) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input(("M/F: ").upper())

if(sexo.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sexo.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:46:09) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(sexo.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sexo.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:46:23) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(sexo.upper() == M):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sexo.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:46:32) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(sexo.upper() == "M"):
	print(round((72,7 * alt) - 58),2)
else:
	print(round((62,1 * alt) - 44,7),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round((62,1 * alt) - 44,7),2)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:47:06) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(sexo.upper() == "M"):
	print(round((72,7 * alt) - 58) ,2)
else:
	print(round((62,1 * alt) - 44,7) ,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round((62,1 * alt) - 44,7) ,2)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:47:58) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(sexo.upper() == "M"):
	var1(round((72,7 * alt) - 58) ,2)
	print(var1)
else:
	var2(round((62,1 * alt) - 44,7) ,2)
	print(var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    var2(round((62,1 * alt) - 44,7) ,2)
NameError: name 'var2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:48:20) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(sexo.upper() == "M"):
	var1 = (round((72,7 * alt) - 58) ,2)
	print(var1)
else:
	var2 = (round((62,1 * alt) - 44,7) ,2)
	print(var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    var2 = (round((62,1 * alt) - 44,7) ,2)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:49:19) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(sexo.upper() == "M"):
	m = (round((72,7 * alt) - 58) ,2)
	print(m)
else:
	f = (round((62,1 * alt) - 44,7) ,2)
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    f = (round((62,1 * alt) - 44,7) ,2)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:49:28) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(sexo.upper() == "M"):
	m = (round((72,7 * alt) - 58) ,2)
	print(m)
else:
	f = (round((62,1 * alt) - 44,7) ,2)
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    f = (round((62,1 * alt) - 44,7) ,2)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:49:51) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(sexo.upper() == "M"):
	m = (72,7 * alt) - 58
	print(m)
else:
	f = (62,1 * alt) - 44,7
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    f = (62,1 * alt) - 44,7
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:50:14) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")

if(sexo.upper() == "M"):
	m = ((72,7 * alt) - 58)
	print(m)
else:
	f = ((62,1 * alt) - 44,7)
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    f = ((62,1 * alt) - 44,7)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:51:45) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72,7 * alt) - 58)
f = ((62,1 * alt) - 44,7)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    m = ((72,7 * alt) - 58)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:54:01) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72.7 * alt) - 58.0)
f = ((62.1 * alt) - 44.7)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:54:09) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72.7 * alt) - 58.0)
f = ((62.1 * alt) - 44.7)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- EXECUTION TIME:
0.15252
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.711799999999997
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:54:15) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72.7 * alt) - 58.0)
f = ((62.1 * alt) - 44.7)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:54:48) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72.7 * alt) - 58.0)
f = ((62.1 * alt) - 44.7)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- EXECUTION TIME:
0.266752
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.711799999999997
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:55:58) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72.7 * alt) - 58.0)
f = ((62.1 * alt) - 44.7)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:55:58) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72.7 * alt) - 58.0)
f = ((62.1 * alt) - 44.7)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:56:58) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72.7 * alt) - 58.0)
f = ((62.1 * alt) - 44.7)

if(sexo.upper() == "M"):
	print(round(m) ,2)
else:
	print(round(f) ,2)
-- OUTPUT:
17 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:57:17) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72.7 * alt) - 58.0)
f = ((62.1 * alt) - 44.7)

if(sexo.upper() == "M"):
	print(round(m),2)
else:
	print(round(f),2)
-- OUTPUT:
17 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:57:38) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72.7 * alt) - 58.0)
f = ((62.1 * alt) - 44.7)

if(sexo.upper() == "M"):
	print(round(m) ,2)
else:
	print(round(f) ,2)
-- OUTPUT:
17 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:58:05) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = ((72.7 * alt) - 58.0)
f = ((62.1 * alt) - 44.7)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:59:08) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = (round((72.7 * alt) - 58.0),2)
f = (round((62.1 * alt) - 44.7),2)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- OUTPUT:
(17, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:59:37) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = (round((72.7 * alt) - 58.0 , 2)
f = (round((62.1 * alt) - 44.7 , 2)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- ERROR:
File "XXXX", line 4
    f = (round((62.1 * alt) - 44.7 , 2)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:59:49) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = round((72.7 * alt) - 58.0 , 2)
f = round((62.1 * alt) - 44.7 , 2)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:59:56) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = round((72.7 * alt) - 58.0 , 2)
f = round((62.1 * alt) - 44.7 , 2)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- EXECUTION TIME:
0.168458
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:00:04) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = round((72.7 * alt) - 58.0 , 2)
f = round((62.1 * alt) - 44.7 , 2)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 17:00:21) 
-- CODE:
alt = float(input("Qual sua altura? "))
sexo = input("M/F: ")
m = round((72.7 * alt) - 58.0 , 2)
f = round((62.1 * alt) - 44.7 , 2)

if(sexo.upper() == "M"):
	print(m)
else:
	print(f)
-- EXECUTION TIME:
0.174132
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
